<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:elevation="@dimen/_5sdp"
            android:translationZ="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_12sdp"
            app:cardElevation="@dimen/_5sdp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_title_blue"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/msgTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:paddingVertical="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTV" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cancelTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/bg_cancel"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/okTV"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/msgTV" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/okTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:background="@drawable/bg_agree"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toEndOf="@id/cancelTV"
                    app:layout_constraintTop_toBottomOf="@id/msgTV" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</layout>